# matuai

./: README.md
matugen-llava-seed/: Cargo.toml  README.md  default-config.toml  example-matugen-config.toml
matugen-llava-seed/src/: config.rs  lib.rs  llava.rs  main.rs  matugen.rs  reload.rs  utils.rs  watch.rs
matugen-llava-seed/systemd/: matugen-llava-seed.path  matugen-llava-seed.service  matugen-llava-seed.timer
matugen-llava-seed/tests/: basic.rs
