[package]
name = "matugen-llava-seed"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "blocking"] }
image = "0.24"
base64 = "0.21"
notify = "6"
tempfile = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
toml = "0.8"
directories = "5"
sha2 = "0.10"
regex = "1"
glob = "0.3"
thiserror = "1"
which = "6"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
